--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "workout-alerts",
+  "name": "wodalert",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for workout-alerts goes here",
+  "description": "",
   "license": "MIT",
   "author": "",
   "directories": {
