--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "bulma": "0.6.1",
     "ember-ajax": "^3.0.0",
     "ember-api-actions": "^0.1.7",
     "ember-cli": "~2.17.0",
@@ -31,6 +32,7 @@
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-sass": "^7.1.4",
     "ember-cli-uglify": "^2.0.0",
     "ember-cookies": "^0.1.2",
     "ember-data": "~2.16.2",
