--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
+    "ember-cli-sass": "^7.1.4",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-sass": "^7.1.4",
     "ember-cli-uglify": "^2.0.0",
     "ember-cookies": "^0.1.2",
     "ember-data": "~2.16.2",
@@ -40,6 +40,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.16.0",
+    "ember-truth-helpers": "^2.0.0",
     "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3"
   },
