--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-cookies": "^0.1.2",
     "ember-data": "~2.16.2",
     "ember-export-application-global": "^2.0.0",
+    "ember-inflector": "^2.1.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.16.0",
