--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-sass": "^7.1.4",
     "ember-cli-shims": "^1.1.0",
@@ -39,6 +40,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-inflector": "^2.1.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-moment": "^7.7.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.16.0",
     "ember-truth-helpers": "^2.0.0",
