--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-inflector": "^2.1.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-metrics": "^0.12.1",
     "ember-moment": "^7.7.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.16.0",
